frontend/test/should_fail/computations_decl_use_calls_arguments_mismatch_003.grg
func(var b:boolean) : boolean
{
	return(b);
}

call()
{
	def var b:boolean;
	func(b);
	return;
}

